// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackBar component should match snapshots 1`] = `
.c9 {
  pointer-events: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c7 *:nth-child(2) {
  margin-left: 5px;
}

.c7 .c8 {
  font-size: 24px;
}

.c7:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c7:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  display: grid;
  grid-column-gap: var(--gutter);
  grid-row-gap: var(--gutter);
  margin-bottom: var(--gutter);
  grid-auto-columns: max-content;
}

.c1 {
  word-break: break-word;
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  padding: 13px 16px;
}

.c3 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(128,128,128,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c6:hover,
.c6:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c5 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1px) {
  .c0 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:600px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1440px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1920px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:600px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1024px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1440px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1920px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      role="dialog"
    >
      <strong
        className="c3"
      >
        Text of SnackBar component
      </strong>
      <div
        className="c4"
      >
        <a
          className="c5"
          href="/"
        >
          action
        </a>
        <button
          aria-label="close SnackBar"
          className="c6 c7"
          disabled={false}
          onClick={[Function]}
          size="medium"
          type="button"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-1 c8 c9"
            size="medium"
            style={
              Object {
                "color": "",
              }
            }
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar component should match snapshots 2`] = `
.c9 {
  pointer-events: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c7 *:nth-child(2) {
  margin-left: 5px;
}

.c7 .c8 {
  font-size: 24px;
}

.c7:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c7:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  display: grid;
  grid-column-gap: var(--gutter);
  grid-row-gap: var(--gutter);
  margin-bottom: var(--gutter);
  grid-auto-columns: max-content;
}

.c1 {
  word-break: break-word;
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  padding: 13px 16px;
}

.c3 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(128,128,128,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c6:hover,
.c6:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c5 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1px) {
  .c0 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:600px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1440px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1920px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:600px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1024px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1440px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1920px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      role="dialog"
    >
      <strong
        className="c3"
      >
        SnackBar message content 
      </strong>
      <div
        className="c4"
      >
        <a
          className="c5"
          href="/"
        >
          action
        </a>
        <button
          aria-label="close SnackBar"
          className="c6 c7"
          disabled={false}
          onClick={[Function]}
          size="medium"
          type="button"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-1 c8 c9"
            size="medium"
            style={
              Object {
                "color": "",
              }
            }
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar component should match snapshots 3`] = `
.c9 {
  pointer-events: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c7 *:nth-child(2) {
  margin-left: 5px;
}

.c7 .c8 {
  font-size: 24px;
}

.c7:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c7:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  display: grid;
  grid-column-gap: var(--gutter);
  grid-row-gap: var(--gutter);
  margin-bottom: var(--gutter);
  grid-auto-columns: max-content;
}

.c1 {
  word-break: break-word;
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  padding: 13px 16px;
}

.c3 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(128,128,128,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c6:hover,
.c6:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c5 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1px) {
  .c0 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:600px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1440px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1920px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:600px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1024px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1440px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1920px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      role="dialog"
    >
      <strong
        className="c3"
      >
        Text of SnackBar component
      </strong>
      <div
        className="c4"
      >
        <a
          className="c5"
          href="/"
        >
          action
        </a>
        <button
          aria-label="close SnackBar"
          className="c6 c7"
          disabled={false}
          onClick={[Function]}
          size="medium"
          type="button"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-1 c8 c9"
            size="medium"
            style={
              Object {
                "color": "",
              }
            }
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar component should match snapshots 4`] = `
.c9 {
  pointer-events: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c7 *:nth-child(2) {
  margin-left: 5px;
}

.c7 .c8 {
  font-size: 24px;
}

.c7:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c7:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  display: grid;
  grid-column-gap: var(--gutter);
  grid-row-gap: var(--gutter);
  margin-bottom: var(--gutter);
  grid-auto-columns: max-content;
}

.c1 {
  word-break: break-word;
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  padding: 13px 16px;
}

.c3 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(128,128,128,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c6:hover,
.c6:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c5 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1px) {
  .c0 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:600px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1440px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1920px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:600px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1024px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1440px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1920px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      role="dialog"
    >
      <strong
        className="c3"
      >
        Text of SnackBar component
      </strong>
      <div
        className="c4"
      >
        <a
          className="c5"
          href="/"
        >
          action
        </a>
        <button
          aria-label="close"
          className="c6 c7"
          disabled={false}
          onClick={[Function]}
          size="medium"
          type="button"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-1 c8 c9"
            size="medium"
            style={
              Object {
                "color": "",
              }
            }
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar component should match snapshots 5`] = `
.c9 {
  pointer-events: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c7 *:nth-child(2) {
  margin-left: 5px;
}

.c7 .c8 {
  font-size: 24px;
}

.c7:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c7:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  display: grid;
  grid-column-gap: var(--gutter);
  grid-row-gap: var(--gutter);
  margin-bottom: var(--gutter);
  grid-auto-columns: max-content;
}

.c1 {
  word-break: break-word;
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  padding: 13px 16px;
}

.c3 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(128,128,128,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c6:hover,
.c6:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c5 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1px) {
  .c0 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:600px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1440px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1920px) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:1px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:600px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1024px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1440px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

@media (min-width:1920px) {
  .c1 {
    grid-column: 2/ span 10;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      role="dialog"
    >
      <strong
        className="c3"
      >
        Text of SnackBar component
      </strong>
      <div
        className="c4"
      >
        <a
          className="c5"
          href="/"
        >
          action
        </a>
        <button
          aria-label="close SnackBar"
          className="c6 c7"
          disabled={false}
          onClick={[Function]}
          size="medium"
          type="button"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-1 c8 c9"
            size="medium"
            style={
              Object {
                "color": "",
              }
            }
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
